--- a/ML2019FALL/hw1-Regression/hw1_Report.ipynb
+++ b/ML2019FALL/hw1-Regression/hw1_Report.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,6 +74,7 @@
     "            if f == name:\n",
     "                id_features.append(i)               \n",
     "    # Modify the dict, the last row is wanted to predict vaules.\n",
+    "    month_to_data = month_to_data.copy()\n",
     "    month_to_datay = {}\n",
     "    for month, data in month_to_data.items():\n",
     "        month_to_data[month] = data[id_features]\n",
@@ -94,7 +95,7 @@
     "        return x,y\n",
     "    elif select == 'ob':\n",
     "        if f_size == 9:\n",
-    "            x = np.empty(shape = (240, 18 * 9),dtype = float)\n",
+    "            x = np.empty(shape = (240, n_features * f_size),dtype = float)\n",
     "            y = np.empty(shape = (240, 1),dtype = float)\n",
     "            for idx in range(240):\n",
     "                x[idx,:] = month_to_data[idx][:,:].reshape(1,-1) \n",
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +183,8 @@
     "            mse = loss_value(X,y,w,'mse')\n",
     "            return np.power(mse,0.5)\n",
     "    # Optmize function\n",
-    "    def update_parameters(X,y,w,sigma,opt):\n",
+    "    def update_parameters(X,y,w,sigma,m,opt,b1=0.9,b2=0.999):\n",
+    "        EPSILON = 1e-08\n",
     "        if regularization == 'l1':\n",
     "            reg = lamda * w\n",
     "        elif regularization == 'l2':\n",
@@ -194,8 +196,16 @@
     "        if opt == 'ada':\n",
     "            sigma += np.sqrt(grad**2)\n",
     "            w -= grad * learning_rate / sigma \n",
+    "        elif opt == 'RMSProp':\n",
+    "            sigma = np.sqrt(b2 * sigma**2 + (1-b2) * grad**2)\n",
+    "            w -= grad * learning_rate / (sigma + EPSILON) \n",
+    "        elif opt == 'Adam':\n",
+    "            m = (b1 * m + (1-b1) * grad) / (1-b1)\n",
+    "            sigma = np.sqrt((b2 * sigma + (1-b2) * grad**2) / (1-b2))\n",
+    "            w -= m * learning_rate / (sigma + EPSILON)\n",
     "        else:\n",
-    "            w -= grad * learning_rate\n",
+    "            m = b1 * m + (1-b1) * grad # momentum\n",
+    "            w -= m * learning_rate\n",
     "        return w, sigma\n",
     "    \n",
     "    def get_mini_batch(X,y,batch_size):\n",
@@ -229,9 +239,10 @@
     "    X_v, w_v = initial(X_v,weights,bias)  \n",
     "    # Set model parameter\n",
     "    sigma = None\n",
+    "    m = 0\n",
     "    if opt == 'stg':\n",
     "        batch_size = 1\n",
-    "    elif opt == 'ada':\n",
+    "    elif opt == 'ada' or 'RMSProp' or 'Adam':\n",
     "        sigma = np.zeros(w.shape)   \n",
     "    # Mini-Batch Training    \n",
     "    cost_history = []\n",
@@ -244,14 +255,14 @@
     "        \n",
     "        if batch_size == None:\n",
     "                # Update weights\n",
-    "                w, sigma = update_parameters(X_t,y_t,w,sigma,opt)    \n",
+    "                w, sigma = update_parameters(X_t,y_t,w,sigma,m,opt)    \n",
     "        # Using mini-batch, get batch data\n",
     "        else:\n",
     "            mini_batches = get_mini_batch(X_t, y_t, batch_size)\n",
     "            for mini_batch in mini_batches: \n",
     "                X_mini, y_mini = mini_batch \n",
     "                # Update weights\n",
-    "                w, sigma = update_parameters(X_mini,y_mini,w,sigma,opt)\n",
+    "                w, sigma = update_parameters(X_mini,y_mini,w,sigma,m,opt)\n",
     "        # Cost\n",
     "        cost = loss_value(X_t,y_t,w,loss) # on training set\n",
     "        cost_v = loss_value(X_v,y_v,w,loss) # on validation ser\n",
@@ -286,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,11 +310,11 @@
     "    plt.xlabel(\"epoch\")\n",
     "    plt.ylabel(\"loss\")\n",
     "    plt.title(\"Training Process\")\n",
-    "    plt.show()\n",
     "    if save_model == False:     \n",
     "        plt.savefig(PIC_PATH+'/_history.png')\n",
     "    else:\n",
     "        plt.savefig(PIC_PATH+'/'+save_model+'_history.png')\n",
+    "    plt.show()\n",
     "    plt.close()"
    ]
   },
